--- a/package.json
+++ b/package.json
@@ -1,36 +1,46 @@
 {
-  "name": "se",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack -p --progress --config webpack.config.js",
-    "dev-build": "webpack --progress -d --config webpack.config.js",
-    "watch": "webpack --progress -d --config webpack.config.js --watch",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "react-hot-loader": "^4.3.4",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
-  },
-  "dependencies": {
-    "@material-ui/core": "^1.5.0",
-    "@material-ui/icons": "^2.0.2",
-    "material-ui": "^0.20.2",
-    "react": "^16.4.2",
-    "react-ace": "^6.1.4",
-    "react-contextmenu": "^2.9.4",
-    "react-dom": "^16.4.2"
-  }
+    "name": "se",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "webpack -p --progress --config webpack.config.js",
+        "dev-build": "webpack --progress -d --config webpack.config.js",
+        "watch": "webpack --progress -d --config webpack.config.js --watch",
+        "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/cli": "^7.4.4",
+        "@babel/core": "^7.4.5",
+        "@babel/plugin-proposal-class-properties": "^7.4.4",
+        "@babel/preset-env": "^7.4.5",
+        "@babel/preset-react": "^7.0.0",
+        "webpack": "^4.16.5",
+        "webpack-cli": "^3.1.0"
+    },
+    "dependencies": {
+        "@material-ui/core": "^4.0.0",
+        "@material-ui/icons": "^4.0.0",
+        "@material-ui/styles": "^4.0.0",
+        "babel-loader": "^8.0.6",
+        "jss": "^10.0.0-alpha.16",
+        "react": "^16.8.6",
+        "react-ace": "^6.1.4",
+        "react-contextmenu": "^2.9.4",
+        "react-custom-scrollbars": "^4.2.1",
+        "react-dom": "^16.8.6"
+    },
+    "babel": {
+        "presets": [
+            "@babel/preset-env",
+            "@babel/preset-react"
+        ],
+        "plugins": [
+            "@babel/plugin-proposal-class-properties"
+        ]
+    }
 }
